diabled PID file

--- a/config/clamav-milter.conf
+++ b/config/clamav-milter.conf
@@ -53,7 +53,7 @@ Foreground yes
 # daemon (main thread).
 #
 # Default: disabled
-PidFile /var/run/clamav-milter.pid
+#PidFile /var/run/clamav-milter.pid
 
 # Optional path to the global temporary directory.
 # Default: system specific (usually /tmp or /var/tmp).
